--- a/app/views/routes/index.html.erb
+++ b/app/views/routes/index.html.erb
@@ -32,5 +32,5 @@
 
 <br>
 
-<%= link_to 'New Route', new_route_path %>
-<%= link_to 'New Airplane', new_route_path %>
+<%= link_to 'New route', new_route_path %><br><br>
+<%= link_to 'Listing Airplanes', airplanes_path %>
