--- a/app/views/passengers/index.html.erb
+++ b/app/views/passengers/index.html.erb
@@ -19,9 +19,7 @@
         <td><%= passenger.nombre %></td>
         <td><%= passenger.apellido %></td>
         <td><%= passenger.identificacion %></td>
-        <td>
-      
-        </td>
+        <td><%= passenger.vuelo %></td>
         <td><%= link_to 'Show', passenger %></td>
         <td><%= link_to 'Edit', edit_passenger_path(passenger) %></td>
         <td><%= link_to 'Destroy', passenger, method: :delete, data: { confirm: 'Are you sure?' } %></td>
